# MoyuReader

./: .gitignore  LICENSE  Package.swift  README.md
.github/workflows/: windows-build.yml
Resources/: AppIcon.icns  MoyuReaderInfo.plist
Scripts/: build_app.sh  build_dmg.sh  make_windows_icon.py  verify_dmg.sh  verify_dmg_archive.sh
Sources/MoyuReader/: AppDelegate.swift  BookLibraryStore.swift  BookLibraryWindowController.swift  BookParseCache.swift  ReaderSettings.swift  ReaderWindowController.swift  ReadingProgressStore.swift  SettingsWindowController.swift  main.swift
Sources/MoyuReaderCore/: BookLibraryCatalog.swift  EpubParser.swift  ReaderAdaptiveTextColor.swift  ReaderChapterNavigation.swift  ReaderKeyboardNavigation.swift  ReaderResizeGeometry.swift  ReaderScrollMath.swift  ReaderSettingLimits.swift  ReadingDocument.swift
Tests/MoyuReaderCoreTests/: BookLibraryCatalogTests.swift  EpubParserTests.swift  ReaderAdaptiveTextColorTests.swift  ReaderChapterNavigationTests.swift  ReaderResizeGeometryTests.swift  ReaderScrollMathTests.swift  ReaderSettingLimitsTests.swift  ReadingDocumentTests.swift
windows/: README.md  build_windows.bat  build_windows.ps1  make_icon.py  moyureader_launcher.py  pyproject.toml  requirements.txt
windows/moyureader_win/: __init__.py  app.py  chapter_navigation.py  epub.py  models.py  reader_formatting.py  scrolling.py  settings.py  store.py  window_geometry.py
windows/tests/: test_build_script.py  test_core.py
