[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "moyureader-win"
version = "0.1.0"
description = "MoyuReader for Windows"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.9.1"]

[tool.setuptools]
packages = ["moyureader_win"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
